fixed audio text overflow and not marqueeing on the audio element

--- a/css/web-audio.css
+++ b/css/web-audio.css
@@ -188,6 +188,11 @@ audio#main-audio {
     margin: auto;
     padding-right: 1rem;
     padding-left: 1rem;
+    overflow: hidden;
+}
+
+.audio-vertical-center .text-input.no-wrap {
+    overflow: hidden;
 }
 
 .no-wrap {
